--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "mechero",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/app.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.0.35",
-    "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.1"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "express": "^4.18.2"
   }
 }
